--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -1,7 +1,7 @@
 <div class="group-mixed with-checkbox">
 
   <div class="group-mixed--left">
-    <input type="checkbox" ng-model="task.transientProperties.completed"
+    <input type="checkbox" ng-model="task.trans.completed"
     swiper-click="toggleLeftCheckbox(task, toggleCompleteTask)" icon-checkbox="task.uuid">
   </div>
 
