--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -1,5 +1,5 @@
 <div ng-if="isFeatureActive('focus')" class="container-content--outer" list-container>
-  <section ng-show="isOnboarded('focusNotes')" class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {transientProperties: {favorited:true, itemType: 'note'}})" swiper-prevent>
+  <section ng-show="isOnboarded('focusNotes')" class="container-content" list="allNotes | itemsFilter:{name:'favorited'}" list-order="top" list-open="openEditor('note', {trans: {favorited:true, itemType: 'note'}})" swiper-prevent>
     <h2 class="group-heading justified row">favorite</h2>
     <div class="animate-list-item-leave tall"
     ng-repeat="note in getList() | orderBy:'favorited':true | limitTo: currentListLimitTo"
