--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -8,7 +8,7 @@
       </div>
       <div class="group-mixed--right" task-list-completed></div>
     </div>
-    <div list-item-add="{transientProperties: {completed: false, list: list.uuid, itemType: 'task'}}" list-item-add-save="saveTask(newItem)"
+    <div list-item-add="{trans: {completed: false, list: list.uuid, itemType: 'task'}}" list-item-add-save="saveTask(newItem)"
     ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
     ng-repeat="task in listTasks = (getList() | paramFilter:isListItemVisible) | orderBy:'created':true
