--- a/frontend/core/src/main/webapp/static/app/lists/listsActive.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsActive.html
@@ -3,7 +3,7 @@
   ng-init="setListOnboarding('lists', listOnboarding)">
     <div ng-show="isOnboarded('lists') || isListOnboardingLockedOrReleased('lists')">
       <h2 class="group-heading justified row">active</h2>
-      <div list-item-add="{transientProperties: {itemType: 'list'}}" list-item-add-save="saveList(newItem)"
+      <div list-item-add="{trans: {itemType: 'list'}}" list-item-add-save="saveList(newItem)"
       ng-include="urlBase + 'app/lists/listListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
       ng-repeat="list in getList() | orderBy:'created':true | limitTo: currentListLimitTo"
