--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -27,11 +27,11 @@
 
       <!-- SEARCH / FILTERED RESULTS -->
       <div ng-repeat="searchResult in filteredItems.searchResults = (searchItems | filter: itemsFilter)" class="group-mixed with-checkbox">
-        <a href class="group-mixed--middle link-search-result" ng-click="initializeEditor(searchResult.transientProperties.itemType, searchResult)">
+        <a href class="group-mixed--middle link-search-result" ng-click="initializeEditor(searchResult.trans.itemType, searchResult)">
           <span class="text-search-result" clamp=2 ng-bind="searchResult.title"></span>
         </a>
         <div class="group-mixed--right">
-          <span class="text-search-type" ng-bind="searchResult.transientProperties.itemType"></span>
+          <span class="text-search-type" ng-bind="searchResult.trans.itemType"></span>
         </div>
       </div>
 
