--- a/frontend/core/src/main/webapp/static/app/main/trash.html
+++ b/frontend/core/src/main/webapp/static/app/main/trash.html
@@ -3,11 +3,11 @@
     <h2 class="group-heading justified row" ng-bind="allDeleted.length + ' deleted'"></h2>
 
     <div ng-repeat="deletedItem in allDeleted | orderBy: 'deleted': true" class="group-mixed with-checkbox">
-      <a href class="group-mixed--middle link-search-result" ng-click="openEditor(deletedItem.tagType ? 'tag' : deletedItem.transientProperties.itemType, deletedItem)">
+      <a href class="group-mixed--middle link-search-result" ng-click="openEditor(deletedItem.tagType ? 'tag' : deletedItem.trans.itemType, deletedItem)">
         <span class="text-search-result" clamp=2 ng-bind="deletedItem.title"></span>
       </a>
       <div class="group-mixed--right">
-        <span class="text-search-type" ng-bind="deletedItem.tagType ? deletedItem.tagType : deletedItem.transientProperties.itemType"></span>
+        <span class="text-search-type" ng-bind="deletedItem.tagType ? deletedItem.tagType : deletedItem.trans.itemType"></span>
       </div>
     </div>
   </section>
