--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -5,7 +5,7 @@
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endTaskEdit()" >
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !task.deleted ? 'save' : 'back'"></span>
         </a>
-        <a ng-if="!task.deleted" class="group-symmetrical--right" href ng-click="deleteTaskInEdit()" >
+        <a href ng-if="!task.deleted" class="group-symmetrical--right" ng-click="deleteTaskInEdit()" >
           <span class="icon-trash"></span>
         </a>
         <a ng-if="task.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteTask(task)"><span class="text-navigation">restore</span></a>
