Made master container footers, except those with big buttons, same size as toolbar.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -7,18 +7,16 @@
         <span class="text-jumbotron">the way</span><br/>
         <span class="text-jumbotron">you</span><br/>
         <span class="text-jumbotron highlighted">think</span>
-        </p>
+      </p>
     </div>
   </section>
-  <footer class="container-content--after">
-    <div class="group-btn">
-      <button class="btn-action" ng-click="swipeToSignup()">
-        <span class="text-btn">sign up</span>
-      </button>
-      <button class="btn-action" ng-click="swipeToLogin()">
-        <span class="text-btn">log in</span>
-      </button>
-    </div>
+  <footer class="container-content--after group-btn">
+    <button class="btn-action" ng-click="swipeToSignup()">
+      <span class="text-btn">sign up</span>
+    </button>
+    <button class="btn-action" ng-click="swipeToLogin()">
+      <span class="text-btn">log in</span>
+    </button>
   </footer>
 </div>
 <div ng-if="entryState === 'download'">
