--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -60,10 +60,10 @@
 
           <div class="table">
             <div class="table-row">
-              <a href class="table-cell" ng-click="convertToTask(list)">
+              <a href class="table-cell link" ng-click="convertToTask(list)">
                 <span class="text-convert">task</span>
               </a>
-              <a href class="table-cell" ng-click="convertToNote(list)">
+              <a href class="table-cell link" ng-click="convertToNote(list)">
                 <span class="text-convert">note</span>
               </a>
             </div>
