--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -31,15 +31,15 @@
     </div>
     <footer class="container-content--after editor-footer">
       <div class="group-symmetrical">
-        <a href class="group-symmetrical--left" ng-click="convertToTask(item)">
+        <a href class="group-symmetrical--left link" ng-click="convertToTask(item)">
           <span class="text-convert">task</span>
         </a>
         <div class="group-symmetrical--middle width-large">
-          <a href ng-click="convertToNote(item)">
+          <a href class="link" ng-click="convertToNote(item)">
             <span class="text-convert">note</span>
           </a>
         </div>
-        <a href class="group-symmetrical--right" ng-click="convertToList(item)">
+        <a href class="group-symmetrical--right link" ng-click="convertToList(item)">
           <span class="text-convert">list</span>
         </a>
       </div>
