--- a/frontend/core/src/main/webapp/static/app/base/later.html
+++ b/frontend/core/src/main/webapp/static/app/base/later.html
@@ -1,27 +1,27 @@
 <div class="table two-to-left">
   <div class="table-row">
-    <a href class="table-cell" ng-click="setDateToday()">
+    <a href class="table-cell link" ng-click="setDateToday()">
       <span class="text-convert">today</span>
     </a>
-    <a href class="table-cell" ng-click="setDateTomorrow()">
+    <a href class="table-cell link" ng-click="setDateTomorrow()">
       <span class="text-convert">tomorrow</span>
     </a>
   </div>
 
   <div class="table-row">
-    <a href class="table-cell" ng-click="setDateDayAfterTomorrow()">
+    <a href class="table-cell link" ng-click="setDateDayAfterTomorrow()">
       <span class="text-convert">2 days later</span>
     </a>
-    <a href class="table-cell" ng-click="setDateNextWeekend()">
+    <a href class="table-cell link" ng-click="setDateNextWeekend()">
       <span class="text-convert">weekend</span>
     </a>
   </div>
 
   <div class="table-row">
-    <a href class="table-cell" ng-click="setDateFirstDayOfNextWeek()">
+    <a href class="table-cell link" ng-click="setDateFirstDayOfNextWeek()">
       <span class="text-convert">next week</span>
     </a>
-    <a href class="table-cell" ng-click="setDateFirstDayOfNextMonth()">
+    <a href class="table-cell link" ng-click="setDateFirstDayOfNextMonth()">
       <span class="text-convert">next month</span>
     </a>
   </div>
