--- a/frontend/core/src/main/webapp/static/app/base/listPicker.html
+++ b/frontend/core/src/main/webapp/static/app/base/listPicker.html
@@ -1,7 +1,7 @@
 <div>
 
   <div ng-if="selectedList" class="group-mixed vertically-centered">
-    <a href class="group-mixed--middle" ng-click="listSelected(selectedList)">
+    <a href class="group-mixed--middle link" ng-click="listSelected(selectedList)">
       <span class="text-link emphasis" clamp=2>{{::prefix}}{{selectedList.title}}</span>
     </a>
 
@@ -18,13 +18,13 @@
   </div>
 
   <div class="row-vertically-centered" ng-repeat="list in lists | filter:notSelectedList | orderBy:'title'" ng-click="listSelected(list)">
-    <a href>
+    <a href class="link">
       <span class="text-link" clamp=2>{{::prefix}}{{list.title}}</span>
     </a>
   </div>
 
   <div class="row-vertically-centered" ng-repeat="archivedList in archivedLists | filter:notSelectedList" ng-click="listSelected(archivedList)">
-    <a href>
+    <a href class="link">
       <span class="text-link" ng-bind="archivedList.title" clamp=2></span>
     </a>
   </div>
