--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -42,7 +42,7 @@
 
           <div ng-if="!listPickerOpen">
             <div ng-hide="descriptionFocused" class="group-mixed vertically-centered animate-fade-in">
-              <a href ng-class="{downplayed: !task.trans.date}" class="group-mixed--middle" ng-click="openCalendar()">
+              <a href ng-class="task.trans.date ? 'link' : 'downplayed'" class="group-mixed--middle" ng-click="openCalendar()">
                 <span class="text-link" ng-bind="task.trans.date ? (task.trans.date | date:'EEE MMM d y' | lowercase) : 'select date\u2026'"></span>
               </a>
               <div ng-if="task.trans.date" class="group-mixed--right">
@@ -53,14 +53,14 @@
             <!-- CALENDAR -->
             <div ng-if="calendarOpen" class="row swiper-no-swiping animate-fade-in" editable-field-container="auto" editable-field-container-clicked-elsewhere="closeCalendar()" data-snap-ignore="true">
               <div calendar="getCalendarStartingDate(task)" calendar-return-date="closeCalendarAndCall(setTaskDate, task, date)" calendar-set-default-date="true" calendar-bound="false">
-                <a class="pikaday-today text-highlighted" href ng-click="gotoCurrentMonth()">
+                <a href class="pikaday-today highlighted" ng-click="gotoCurrentMonth()">
                   <span>today</span>
                 </a>
               </div>
             </div>
 
             <div ng-hide="descriptionFocused || calendarOpen" class="row-vertically-centered">
-              <a href ng-class="{downplayed: !task.trans.list}" ng-click="openListPicker()">
+              <a href ng-class="task.trans.list ? 'link' : 'downplayed'" ng-click="openListPicker()">
                 <span class="text-link" ng-bind="task.trans.list ? getListTitleFromUUID(task.trans.list) : 'select list\u2026'"></span>
               </a>
             </div>
@@ -107,13 +107,13 @@
           <div ng-if="!contextPickerOpen && !repeatingPickerOpen">
 
             <div ng-hide="urlFocused" class="row-vertically-centered">
-              <a href ng-class="{downplayed: !task.trans.context}" ng-click="openContextPicker()">
+              <a href ng-class="task.trans.context ? 'link' : 'downplayed'" ng-click="openContextPicker()">
                 <span class="text-link" ng-bind="task.trans.context ? '@' + getContextTitleFromUUID(task.trans.context) : 'select context\u2026'"></span>
               </a>
             </div>
 
             <div ng-hide="urlFocused || !task.trans.date" class="row-vertically-centered">
-              <a href ng-class="{downplayed: !task.repeating}" ng-click="openRepeatingPicker()">
+              <a href ng-class="task.repeating ? 'link' : 'downplayed'" ng-click="openRepeatingPicker()">
                 <span class="text-link" ng-bind="task.repeating ? task.repeating : 'select repeating\u2026'"></span>
               </a>
             </div>
@@ -131,10 +131,10 @@
 
         <div class="table">
           <div class="table-row">
-            <a href class="table-cell" ng-click="convertToNote(task)">
+            <a href class="table-cell link" ng-click="convertToNote(task)">
               <span class="text-convert">note</span>
             </a>
-            <a href class="table-cell" ng-click="convertToList(task)">
+            <a href class="table-cell link" ng-click="convertToList(task)">
               <span class="text-convert">list</span>
             </a>
           </div>
