Improved focus tasks instruction text

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -462,7 +462,7 @@
       <div class="textgroup-ingress row">on this focus view you can see tasks  sorted by
         <span class="text-highlighted">date</span>
       </div>
-      <div class="textgroup-ingress last row">to change dates, click on the date heading</div>
+      <div class="textgroup-ingress last row">to change dates, click the today heading or swipe down</div>
     </div>
   </section>
   <footer ng-if="!isOnboarded('focusTasks')" class="container-content--after group-btn">
